@@ -1,16 +1,16 @@
 package com.zephyr.core.boot.web;
 
-import static com.zephyr.core.tool.constant.WebConstants.*;
-
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.web.servlet.HandlerInterceptor;
 
-import java.util.Arrays;
+import java.util.HashSet;
+import java.util.List;
+
+import static com.zephyr.core.tool.constant.WebConstants.*;
 
 public class UserInterceptor implements HandlerInterceptor {
     private static final String ANONYMOUS_USER_CODE = "-1";
-    private static final String ANONYMOUS_USER_NAME = "anonymous";
     private static final String ANONYMOUS_ROLE_CODE = "-1";
 
     @Override
@@ -20,14 +20,11 @@ public class UserInterceptor implements HandlerInterceptor {
         String userCode = request.getHeader(USER_CODE_HEADER);
         session.setUserCode(userCode == null ? ANONYMOUS_USER_CODE : userCode);
 
-        String username = request.getHeader(USER_NAME_HEADER);
-        session.setUsername(username == null ? ANONYMOUS_USER_NAME : username);
-
         String roleCodesStr = request.getHeader(ROLE_CODE_HEADER);
         if (roleCodesStr == null || roleCodesStr.isEmpty()) {
-            session.setRoleCodes(Arrays.asList(ANONYMOUS_ROLE_CODE));
+            session.setRoleCodes(new HashSet<>(List.of(ANONYMOUS_ROLE_CODE)));
         } else {
-            session.setRoleCodes(Arrays.asList(roleCodesStr.split(",")));
+            session.setRoleCodes(new HashSet<>(List.of(roleCodesStr.split(","))));
         }
 
         session.setTenantCode(request.getHeader(TENANT_CODE_HEADER));
